# rust_actix

./: .env  Cargo.toml
src/: main.rs
src/apis/: auth_apis.rs  mod.rs  user_apis.rs
src/enums/: message.rs  mod.rs  status.rs
src/middlewares/: auth_middleware.rs
src/models/: admin_model.rs  mod.rs  response.rs  user_model.rs
src/repository/: admin_repo.rs  mod.rs  mongodb_repo.rs  user_repo.rs
src/responses/: login_response.rs  mod.rs  pagination.rs  response.rs  user_response.rs
