[package]
name = "actix-mongo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
actix-cors = "0.6.1"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
actix-session = { version = "0.7.1", features = ["cookie-session"] }
jsonwebtoken = "8.1.1"
chrono = "0.4.22"
serde_json = "1.0"
rust-crypto = "0.2.36"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"] 
